@@ -4,7 +4,7 @@
 
 ---@type ModThis
 local This = {
-    other_mods = { 'PickerDollies' },
+    other_mods = { 'PickerDollies', 'space-exploration' },
     debug_mode = 0, -- bit 0 (0/1): network debug, bit 1 (0/2): entity debug
 
     oc = require('scripts.oc'),
