@@ -66,6 +66,4 @@ local entity = {
     fast_replaceable_group = 'optical-connector',
 }
 
-entity.se_allow_in_space = true
-
 data:extend { entity, item }
